--- a/app/index.html
+++ b/app/index.html
@@ -62,12 +62,17 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
+    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/services/taskrepository.js"></script>
+        <script src="scripts/models/task.js"></script>
+        <script src="scripts/models/basicPlan.js"></script>
+        <script src="scripts/filters/hidetobedeleted.js"></script>
         <!-- endbuild -->
 </body>
 </html>
