--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
         <script src="scripts/services/taskrepository.js"></script>
         <script src="scripts/models/task.js"></script>
         <script src="scripts/models/basicPlan.js"></script>
+        <script src="scripts/models/freePlan.js"></script>
         <script src="scripts/filters/hidetobedeleted.js"></script>
         <!-- endbuild -->
 </body>
