Added planTypes. Minor bug fix (undefined is not an object)

--- a/app/index.html
+++ b/app/index.html
@@ -71,8 +71,8 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/taskrepository.js"></script>
         <script src="scripts/models/task.js"></script>
-        <script src="scripts/models/basicPlan.js"></script>
-        <script src="scripts/models/freePlan.js"></script>
+        <script src="scripts/models/Plan.js"></script>
+        <script src="scripts/models/planTypes.js"></script>
         <script src="scripts/filters/hidetobedeleted.js"></script>
         <!-- endbuild -->
 </body>
